# flo

./: CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  compile_shaders.ps1  compile_shaders.sh
.cargo/: config.toml
assets/: Aula.glb  mannequin.glb  red_grapes_wjbgdiz_low.glb
assets/shaders/: sky_common.wgsl  sky_gradient.wgsl  vertex_color.wgsl  water_material.wgsl  wave_simulation.wgsl
examples/: aula.rs  aula_bevy.rs  cube.rs  cube_bevy.rs  cube_ray.rs  egui.rs  egui_bevy.rs  fluid_sim.rs  fluid_sim_bevy.rs  grapes.rs  grapes_1000.rs  grapes_1000_bevy.rs  grapes_bevy.rs  inspect_glb.rs  mannequin_animation.rs  mannequin_animation_bevy.rs  triangle.rs  triangle_bevy.rs  wireframe_cube.rs  wireframe_cube_bevy.rs
shaders/: cube.frag  cube.frag.spv  cube.vert  cube.vert.spv  cube_ray.frag  cube_ray.frag.spv  cube_ray.vert  cube_ray.vert.spv  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  mesh_instanced.vert  mesh_instanced.vert.spv  mesh_textured.frag  mesh_textured.frag.spv  mesh_textured.vert  mesh_textured.vert.spv  mesh_textured_instanced.vert  mesh_textured_instanced.vert.spv  skinned_full.vert  skinned_full.vert.spv  skinned_instanced.vert  skinned_instanced.vert.spv  sky.frag  sky.frag.spv  sky.vert  sky.vert.spv  texture_array.frag  texture_array.frag.spv  texture_array.vert  texture_array.vert.spv  triangle.frag  triangle.vert  triangle.vert.spv  wall.frag  wall.frag.spv  wall.vert  wall.vert.spv  water.frag  (+7 more)
shaders/common/: constants.glsl  lighting.glsl  materials.glsl  matrices.glsl  patterns.glsl  sky.glsl
src/: constants.rs  egui_integration.rs  fps_logger.rs  gltf_loader.rs  lib.rs  main.rs  memory_pool.rs  mesh.rs  mesh_textured.rs  skinned_mesh.rs  texture.rs  utils.rs  vulkan_common.rs  vulkan_renderer_unified.rs
